perf(proxy): enable Java 25 compact object headers